--- a/starter/style.css
+++ b/starter/style.css
@@ -3,19 +3,28 @@
 * {
   margin: 0;
   padding: 0;
-  box-sizing: inherit;
+  box-sizing: border-box;
 }
 
 html {
   font-size: 62.5%;
   box-sizing: border-box;
+  display: grid;
+  align-items: center;
 }
-
+@media (max-width: 480px) {
+  .container {
+    padding: 2rem;
+  }
+}
 body {
   font-family: 'Press Start 2P', sans-serif;
   color: #eee;
   background-color: #222;
   /* background-color: #60b347; */
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 /* LAYOUT */
@@ -74,6 +83,7 @@ h1 {
   position: absolute;
   top: 2rem;
   right: 2rem;
+  /* width: 40%; */
 }
 
 .again {
